--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "zone.js": "^0.5.10"
   },
   "devDependencies": {
+    "browser-sync": "^2.10.0",
     "concurrently": "^1.0.0",
+    "connect-history-api-fallback": "^1.1.0",
+    "del": "^2.1.0",
+    "gulp": "^3.9.0",
+    "gulp-typescript": "^2.8.0",
     "lite-server": "^1.3.2",
     "typescript": "^1.7.5"
   }
